# EmbeddedLinux-C

./: .gitlab-ci.yml  FAQ.md  README.md
assignment_2.1/: README.md  problem1.md  problem2.md
assignment_2.2/: CMakeLists.txt  README.md  problem1.md  problem2.md  problem3.md
assignment_2.2/examples/: example.json
assignments/practice/: CMakeLists.txt  README.md  problem1.md  problem1.sh  problem2.cxx  problem2.md  problem3.c  problem3.md  problem4.c  problem4.md
assignments/practice/Includes/: CMakeLists_.txt.bak
assignments/practice/examples/: RapidJson.md  dom_parser.cpp  dom_writer.cpp  output.json
assignments/summary/: CMake.md  CommonProblemsinC.md  ErrorHandlingSystemCalls.md  linux-basics.md
extras/: Documentation_for_installing_paho_mqtt_c.md  MQTTPub-Sub.c  bluetooth.sh
